--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -9,6 +9,24 @@
 {%- assign en_url = base_url | append: '/en/' -%}
 {%- assign phone_href = contact.phone_href | default: '' -%}
 {%- assign phone_number = phone_href | remove: 'tel:' | strip -%}
+{%- assign metadata_title = page.title | default: site.title -%}
+{%- assign metadata_description = page.description | default: page.summary | default: site.description -%}
+{%- assign metadata_url = page.url | absolute_url -%}
+{%- assign metadata_image_raw = page.og_image | default: page.image | default: site.image | default: '/assets/images/og-therapy-cove.png' -%}
+{%- assign metadata_image_alt = page.og_image_alt | default: page.image_alt | default: site.title -%}
+{%- if metadata_image_raw contains '://' -%}
+  {%- assign metadata_image = metadata_image_raw -%}
+{%- else -%}
+  {%- assign metadata_image = metadata_image_raw | relative_url | prepend: site.url -%}
+{%- endif -%}
+{%- assign metadata_type = 'website' -%}
+{%- if page.layout == 'news' or page.layout == 'post' -%}
+  {%- assign metadata_type = 'article' -%}
+{%- endif -%}
+{%- assign og_locale = 'el_GR' -%}
+{%- if data_lang == 'en' -%}
+  {%- assign og_locale = 'en_US' -%}
+{%- endif -%}
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,11 +38,32 @@
 <link rel="alternate" hreflang="el" href="{{ default_url }}">
 <link rel="alternate" hreflang="en" href="{{ en_url }}">
 <link rel="alternate" hreflang="x-default" href="{{ default_url }}">
-<meta property="og:image" content="{{ base_url }}{{ '/assets/images/og-therapy-cove.png' | relative_url }}">
+<link rel="canonical" href="{{ metadata_url }}">
+
+<title>{{ metadata_title }}{% if metadata_title != site.title %} | {{ site.title }}{% endif %}</title>
+{% if metadata_description %}
+<meta name="description" content="{{ metadata_description }}">
+{% endif %}
+
+<meta property="og:site_name" content="{{ site.title }}">
+<meta property="og:title" content="{{ metadata_title }}">
+<meta property="og:description" content="{{ metadata_description }}">
+<meta property="og:type" content="{{ metadata_type }}">
+<meta property="og:url" content="{{ metadata_url }}">
+<meta property="og:image" content="{{ metadata_image }}">
+<meta property="og:image:alt" content="{{ metadata_image_alt }}">
+<meta property="og:locale" content="{{ og_locale }}">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
+{% if metadata_type == 'article' and page.date %}
+<meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
+{% endif %}
+
 <meta name="twitter:card" content="summary_large_image">
-{% seo %}
+<meta name="twitter:title" content="{{ metadata_title }}">
+<meta name="twitter:description" content="{{ metadata_description }}">
+<meta name="twitter:image" content="{{ metadata_image }}">
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
