--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,7 @@
 <head>
   {% include seo.html %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ '/assets/vendor/pico/pico.min.css' | relative_url }}">
-  <link rel="preload" as="style" href="{{ '/assets/css/fonts.css' | relative_url }}" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{{ '/assets/css/fonts.css' | relative_url }}"></noscript>
-  <link rel="preload" as="style" href="{{ '/assets/css/tailwind-build.css' | relative_url }}" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{{ '/assets/css/tailwind-build.css' | relative_url }}"></noscript>
-  <link rel="preload" as="style" href="{{ '/assets/css/therapy-cove.css' | relative_url }}" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{{ '/assets/css/therapy-cove.css' | relative_url }}"></noscript>
+  <link rel="stylesheet" href="{{ '/assets/css/site.bundle.css' | relative_url }}">
 </head>
 <body>
   {{ content }}
