--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.active_lang | default: site.lang | default: site.default_lang | default: 'el' }}">
+<html lang="{{ page.lang | default: site.active_lang | default: site.lang | default: site.default_lang | default: 'gr' }}">
 <head>
   {% include seo.html %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
