--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
-{% assign data_lang = page.lang | default: site.active_lang | default: site.default_lang | default: site.lang | default: 'el' %}
-{% assign cove = site.data[data_lang].therapy_cove | default: site.data.therapy_cove %}
+{% assign data_lang = page.lang | default: site.active_lang | default: site.default_lang | default: site.lang | default: 'gr' %}
+{% assign cove = site.data[data_lang].cove | default: site.data.cove %}
 {% assign contact = cove.contact %}
 {% assign contact_intro = contact.intro %}
 {% assign email_label = contact.email_label | default: contact.form.email_label %}
