--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -46,11 +46,11 @@
     </div>
 
     <div id="space" class="cove-hero-media cove-reveal ring-1 ring-cove-charcoal/10 shadow-cove" style="--delay: 360ms;">
-      {% include picture.html
+        {% include picture.html
         src=hero.space_image.src
         alt=hero.space_image.alt
         widths="640,960,1280,1600,2048"
-        sizes="(min-width: 1200px) 1024px, (min-width: 768px) 90vw, 100vw"
+        sizes="(min-width: 1200px) 980px, (min-width: 768px) 88vw, (min-width: 468px) 420px, 90vw"
         width="1280"
         height="720"
         class="cove-hero-image"
