--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,6 @@
   <script defer src="{{ '/assets/js/nav-drawer.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/lang-toggle.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/contact-form.js' | relative_url }}"></script>
+  {% include glancelytics.html %}
 </body>
 </html>
