feat(site): integrate footer attribution component and analytics include

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,6 +57,11 @@
         <a href="{{ legal_href }}" class="cove-footer-link transition-colors duration-200">{{ legal_label }}</a>
         <span class="cove-footer-copy">{{ footer.copyright }}</span>
       </div>
+      <coding-tree-attribution
+        theme="default"
+        size="sm"
+        href="https://github.com/coding-tree-io"
+      ></coding-tree-attribution>
     </div>
   </div>
 </footer>
