--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
   <script defer src="{{ '/assets/js/nav-drawer.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/lang-toggle.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/contact-form.js' | relative_url }}"></script>
-  {% include glancelytics.html %}
+  <script type="module" src="{{ '/assets/vendor/coding-tree-attribution/coding-tree-attribution.v0.1.0.js' | relative_url }}"></script>
+  {% include analytics.html %}
 </body>
 </html>
