fix(styles): stabilize mobile audiences contrast on chrome

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 {% if resolved_lang == 'gr' %}
   {% assign html_lang = 'el' %}
 {% endif %}
-<html lang="{{ html_lang }}">
+<html lang="{{ html_lang }}" data-theme="light">
 <head>
   {% include seo.html %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
